created by zippydoc task

--- a/common-snippets/JP/IfTableExistWithoutAppendNotExisting.json
+++ b/common-snippets/JP/IfTableExistWithoutAppendNotExisting.json
@@ -1,31 +1,31 @@
 {
   "output.if_table_exist.type": {
     "type": "select",
-    "ラベル": "既存の場合,
+    "label": "既存の場合,
     "show_if": "output.custom_options=='true'",
     "val": "drop_if_exist",
     "options": {
       "drop_if_exist": {
-        "ラベル": "作成またはドロップ（既存の場合）"
+        "label": "作成またはドロップ（既存の場合）"
       },
       "error_if_exist": {
-        "ラベル": "新規作成（既存の場合はエラーにする）"
+        "label": "新規作成（既存の場合はエラーにする）"
       },
       "error_if_not_exist": {
-        "ラベル": "ドロップ（存在しない場合はエラーにする）"
+        "label": "ドロップ（存在しない場合はエラーにする）"
       },
       "append_all": {
-        "ラベル": "Append All"
+        "label": "Append All"
       },
       "append_changes": {
-        "ラベル": "変更の追加
+        "label": "変更の追加
       }
     },
     "breakLine": true
   },
   "output.if_table_exist.append_changes__add_timestamp": {
     "type": "checkbox",
-    "ラベル": "Add Timestamp",
+    "label": "Add Timestamp",
     "show_if": "output.if_table_exist.type=='append_changes'",
     "val": "false",
     "isOn": "true",
@@ -33,7 +33,7 @@
   },
   "output.if_table_exist.append_changes__timestamp_colname": {
     "type": "text",
-    "ラベル": "タイムスタンプの列名,
+    "label": "タイムスタンプの列名,
     "show_if": "output.if_table_exist.type=='append_changes' && output.if_table_exist.append_changes__add_timestamp=='true'",
     "val": "Timestamp",
     "required": true,
@@ -41,7 +41,7 @@
   },
   "output.if_table_exist.append_changes__add_row": {
     "type": "checkbox",
-    "ラベル": "行の追加",
+    "label": "行の追加",
     "show_if": "output.if_table_exist.type=='append_changes'",
     "val": "false",
     "isOn": "true",
@@ -49,7 +49,7 @@
   },
   "output.if_table_exist.append_changes__row_colname": {
     "type": "text",
-    "ラベル": "行のカラム名,
+    "label": "行のカラム名,
     "show_if": "output.if_table_exist.type=='append_changes' && output.if_table_exist.append_changes__add_row=='true'",
     "val": "Row",
     "required": true,
