--- a/common-snippets/CN/DownloadSettings.json
+++ b/common-snippets/CN/DownloadSettings.json
@@ -1,19 +1,19 @@
 {
   "download_setting_frame": {
     "type": "fieldset",
-    "标签": "下载设置",
+    "label": "下载设置",
     "show_if": "output.custom_options=='true'",
     "repeat": false,
     "fields": {
       "output.options.location": {
         "type": "text",
-        "标签": "指定位置",
+        "label": "指定位置",
         "val": "A1",
         "breakLine": true
       },
       "output.options.formatted_as_table": {
         "type": "checkbox",
-        "标签": "格式化为表格",
+        "label": "格式化为表格",
         "val": "true",
         "isOn": "true",
         "isOff": "false",
@@ -21,28 +21,28 @@
       },
       "output.options.visibility": {
         "type": "select",
-        "标签": "可见性",
+        "label": "可见性",
         "val": "current_flow",
         "options": {
           "current_flow": {
-            "标签": "当前工作流"
+            "label": "当前工作流"
           },
           "all_flow": {
-            "标签": "所有工作流"
+            "label": "所有工作流"
           }
         },
         "breakLine": true
       },
       "output.options.table_mode": {
         "type": "select",
-        "标签": "粘贴",
+        "label": "粘贴",
         "val": "content_only",
         "options": {
           "content_only": {
-            "标签": "仅内容"
+            "label": "仅内容"
           },
           "fully_formatted": {
-            "标签": "完全格式化"
+            "label": "完全格式化"
           }
         }
       }
