--- a/common-snippets/CN/IfTableExistWithoutAppendNotExisting.json
+++ b/common-snippets/CN/IfTableExistWithoutAppendNotExisting.json
@@ -1,31 +1,31 @@
 {
   "output.if_table_exist.type": {
     "type": "select",
-    "标签": "如果现有",
+    "label": "如果现有",
     "show_if": "output.custom_options=='true'",
     "val": "drop_if_exist",
     "options": {
       "drop_if_exist": {
-        "标签": "创建或删除（如存在）"
+        "label": "创建或删除（如存在）"
       },
       "error_if_exist": {
-        "标签": "新建（如存在则抛出错误）"
+        "label": "新建（如存在则抛出错误）"
       },
       "error_if_not_exist": {
-        "标签": "删除（如不存在则抛出错误）"
+        "label": "删除（如不存在则抛出错误）"
       },
       "append_all": {
-        "标签": "追加所有"
+        "label": "追加所有"
       },
       "append_changes": {
-        "标签": "添加变化"
+        "label": "添加变化"
       }
     },
     "breakLine": true
   },
   "output.if_table_exist.append_changes__add_timestamp": {
     "type": "checkbox",
-    "标签": "添加时间戳",
+    "label": "添加时间戳",
     "show_if": "output.if_table_exist.type=='append_changes'",
     "val": "false",
     "isOn": "true",
@@ -33,7 +33,7 @@
   },
   "output.if_table_exist.append_changes__timestamp_colname": {
     "type": "text",
-    "标签": "时间戳列名",
+    "label": "时间戳列名",
     "show_if": "output.if_table_exist.type=='append_changes' && output.if_table_exist.append_changes__add_timestamp=='true'",
     "val": "Timestamp",
     "required": true,
@@ -41,7 +41,7 @@
   },
   "output.if_table_exist.append_changes__add_row": {
     "type": "checkbox",
-    "标签": "添加行",
+    "label": "添加行",
     "show_if": "output.if_table_exist.type=='append_changes'",
     "val": "false",
     "isOn": "true",
@@ -49,7 +49,7 @@
   },
   "output.if_table_exist.append_changes__row_colname": {
     "type": "text",
-    "标签": "行列名",
+    "label": "行列名",
     "show_if": "output.if_table_exist.type=='append_changes' && output.if_table_exist.append_changes__add_row=='true'",
     "val": "Row",
     "required": true,
