created by zippydoc task

--- a/common-snippets/CN/OutputConfig.json
+++ b/common-snippets/CN/OutputConfig.json
@@ -1,20 +1,20 @@
 {
   "output_config_frame": {
     "type": "fieldset",
-    "标签": "Output Configuration",
+    "label": "Output Configuration",
     "show_if": "output.custom_options=='true'",
     "repeat": false,
     "fields": {
       "output.add_tag": {
         "type": "checkbox",
-        "标签": "添加标记",
+        "label": "添加标记",
         "val": "false",
         "isOn": "true",
         "isOff": "false"
       },
       "output.tag_name": {
         "type": "text",
-        "标签": "标记名称",
+        "label": "标记名称",
         "show_if": "output.add_tag=='true'",
         "required": true,
         "minLength": 1,
