created by zippydoc task

--- a/DE/AutoCleanOutputConfig.json
+++ b/DE/AutoCleanOutputConfig.json
@@ -1,7 +1,7 @@
 {
   "output.auto_run": {
     "type": "checkbox",
-    "Beschriftung": "Autorun",
+    "label": "Autorun",
     "val": "false",
     "isOn": "true",
     "isOff": "false",
