created by zippydoc task

--- a/common-snippets/DE/DownloadSettings.json
+++ b/common-snippets/DE/DownloadSettings.json
@@ -25,7 +25,7 @@
         "val": "current_flow",
         "options": {
           "current_flow": {
-            "label": "Stromfluss"
+            "label": "Aktueller Flow"
           },
           "all_flow": {
             "label": "Alle Flows"
