created by zippydoc task

--- a/common-snippets/FR/IfTableExistWithoutAppendNotExisting.json
+++ b/common-snippets/FR/IfTableExistWithoutAppendNotExisting.json
@@ -18,7 +18,7 @@
         "label": "Ajouter tout"
       },
       "append_changes": {
-        "label": "Ajouter les modifications
+        "label": "Ajouter les modifications"
       }
     },
     "breakLine": true
@@ -49,7 +49,7 @@
   },
   "output.if_table_exist.append_changes__row_colname": {
     "type": "text",
-    "label": "Nom de la colonne de la ligne,
+    "label": "Nom de la colonne de la ligne",
     "show_if": "output.if_table_exist.type=='append_changes' && output.if_table_exist.append_changes__add_row=='true'",
     "val": "Row",
     "required": true,
