created by zippydoc task

--- a/JP/AppendIfTableExist.json
+++ b/JP/AppendIfTableExist.json
@@ -1,7 +1,7 @@
 {
   "output.if_table_exist.type": {
     "type": "select",
-    "label": "既存の場合,
+    "label": "既存の場合",
     "val": "drop_if_exist",
     "options": {
       "drop_if_exist": {
@@ -17,7 +17,7 @@
         "label": "Append All"
       },
       "append_not_existing": {
-        "label": "既存でない場合
+        "label": "既存でない場合"
       }
     }
   },
