created by zippydoc task

--- a/common-snippets/DE/DownloadSettings.json
+++ b/common-snippets/DE/DownloadSettings.json
@@ -42,7 +42,7 @@
             "label": "Nur Inhalt"
           },
           "fully_formatted": {
-            "label": "Vollständig formatiert"
+            "label": "Formatiert"
           }
         }
       }
