created by zippydoc task

--- a/common-snippets/DE/IfTableExistWithoutAppendNotExisting.json
+++ b/common-snippets/DE/IfTableExistWithoutAppendNotExisting.json
@@ -6,19 +6,19 @@
     "val": "drop_if_exist",
     "options": {
       "drop_if_exist": {
-        "label": "Erstellen oder Verwerfen (falls bereits vorhanden)"
+        "label": "Erstellen oder überschreiben (falls vorhanden)"
       },
       "error_if_exist": {
-        "label": "Neu erstellen (wirft Fehler, wenn vorhanden)"
+        "label": "Neu erstellen (Fehler, falls vorhanden)"
       },
       "error_if_not_exist": {
-        "label": "Ablegen (Fehler werfen, wenn nicht vorhanden)"
+        "label": "Überschreiben (Fehler, wenn keine Tabelle vorhanden)"
       },
       "append_all": {
-        "label": "Alles anhängen"
+        "label": "Am Ende ergänzen"
       },
       "append_changes": {
-        "label": "Änderungen anhängen"
+        "label": "Geänderte Zeilen am Ende ergänzen"
       }
     },
     "breakLine": true
@@ -41,7 +41,7 @@
   },
   "output.if_table_exist.append_changes__add_row": {
     "type": "checkbox",
-    "label": "Neue Reihe",
+    "label": "Neue Zeile",
     "show_if": "output.if_table_exist.type=='append_changes'",
     "val": "false",
     "isOn": "true",
