created by zippydoc task

--- a/DE/AppendIfTableExist.json
+++ b/DE/AppendIfTableExist.json
@@ -5,19 +5,19 @@
     "val": "drop_if_exist",
     "options": {
       "drop_if_exist": {
-        "label": "Erstellen oder Verwerfen (falls bereits vorhanden)"
+        "label": "Erstellen oder überschreiben (falls vorhanden)"
       },
       "error_if_exist": {
-        "label": "Neu erstellen (wirft Fehler, wenn vorhanden)"
+        "label": "Neu erstellen (Fehler, falls vorhanden)"
       },
       "error_if_not_exist": {
-        "label": "Ablegen (Fehler werfen, wenn nicht vorhanden)"
+        "label": "Überschreiben (Fehler, wenn keine Tabelle vorhanden)"
       },
       "append_all": {
-        "label": "Alles anhängen"
+        "label": "Am Ende ergänzen"
       },
       "append_not_existing": {
-        "label": "Nicht vorhanden anhängen"
+        "label": "Nicht vorhandene Zeilen ergänzen"
       }
     }
   },
