created by zippydoc task

--- a/DE/AppendInput.json
+++ b/DE/AppendInput.json
@@ -19,7 +19,7 @@
       },
       "source_table.table": {
         "type": "select",
-        "label": "Rechter Tisch",
+        "label": "Rechte Tabelle",
         "bind": "TABLES",
         "breakLine": true
       },
