--- a/common-snippets/DE/IfTableExistWithoutAppendNotExisting.json
+++ b/common-snippets/DE/IfTableExistWithoutAppendNotExisting.json
@@ -1,31 +1,31 @@
 {
   "output.if_table_exist.type": {
     "type": "select",
-    "label": "Wenn vorhanden",
+    "label": "If existing",
     "show_if": "output.custom_options=='true'",
     "val": "drop_if_exist",
     "options": {
       "drop_if_exist": {
-        "label": "Erstellen oder überschreiben (falls vorhanden)"
+        "label": "Create or Drop (if already existing)"
       },
       "error_if_exist": {
-        "label": "Neu erstellen (Fehler, falls vorhanden)"
+        "label": "Create New (throw error if existing)"
       },
       "error_if_not_exist": {
-        "label": "Überschreiben (Fehler, wenn keine Tabelle vorhanden)"
+        "label": "Drop (throw error if not-existing)"
       },
       "append_all": {
-        "label": "Am Ende ergänzen"
+        "label": "Append All"
       },
       "append_changes": {
-        "label": "Geänderte Zeilen am Ende ergänzen"
+        "label": "Append changes"
       }
     },
     "breakLine": true
   },
   "output.if_table_exist.append_changes__add_timestamp": {
     "type": "checkbox",
-    "label": "Zeitstempel hinzufügen",
+    "label": "Add Timestamp",
     "show_if": "output.if_table_exist.type=='append_changes'",
     "val": "false",
     "isOn": "true",
@@ -33,7 +33,7 @@
   },
   "output.if_table_exist.append_changes__timestamp_colname": {
     "type": "text",
-    "label": "Zeitstempel-Spaltenname",
+    "label": "Timestamp column name",
     "show_if": "output.if_table_exist.type=='append_changes' && output.if_table_exist.append_changes__add_timestamp=='true'",
     "val": "Timestamp",
     "required": true,
@@ -41,7 +41,7 @@
   },
   "output.if_table_exist.append_changes__add_row": {
     "type": "checkbox",
-    "label": "Neue Zeile",
+    "label": "Add Row",
     "show_if": "output.if_table_exist.type=='append_changes'",
     "val": "false",
     "isOn": "true",
@@ -49,7 +49,7 @@
   },
   "output.if_table_exist.append_changes__row_colname": {
     "type": "text",
-    "label": "Zeilenspaltenname",
+    "label": "Row column name",
     "show_if": "output.if_table_exist.type=='append_changes' && output.if_table_exist.append_changes__add_row=='true'",
     "val": "Row",
     "required": true,
