--- a/common-snippets/DE/DownloadSettings.json
+++ b/common-snippets/DE/DownloadSettings.json
@@ -1,19 +1,19 @@
 {
   "download_setting_frame": {
     "type": "fieldset",
-    "label": "Download Settings",
+    "label": "Einstellungen herunterladen",
     "show_if": "output.custom_options=='true'",
     "repeat": false,
     "fields": {
       "output.options.location": {
         "type": "text",
-        "label": "Specify Location",
+        "label": "Standort angeben",
         "val": "A1",
         "breakLine": true
       },
       "output.options.formatted_as_table": {
         "type": "checkbox",
-        "label": "Formatted as Table",
+        "label": "Als Tabelle formatiert",
         "val": "true",
         "isOn": "true",
         "isOff": "false",
@@ -25,7 +25,7 @@
         "val": "current_flow",
         "options": {
           "current_flow": {
-            "label": "Current Flow"
+            "label": "Aktueller Flow"
           },
           "all_flow": {
             "label": "Alle Flows"
@@ -39,10 +39,10 @@
         "val": "content_only",
         "options": {
           "content_only": {
-            "label": "Content Only"
+            "label": "Nur Inhalt"
           },
           "fully_formatted": {
-            "label": "Fully Formatted"
+            "label": "Formatiert"
           }
         }
       }
