--- a/common-snippets/DE/OutputConfig.json
+++ b/common-snippets/DE/OutputConfig.json
@@ -7,7 +7,7 @@
     "fields": {
       "output.add_tag": {
         "type": "checkbox",
-        "label": "Add Tag",
+        "label": "Tag hinzufügen",
         "val": "false",
         "isOn": "true",
         "isOff": "false"
